Added testing environment

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-# Eclipse
 .metadata
 .settings
 [Rr]elease
 [Dd]ebug
+Projects/Applications/FreeRTOS/FreeRTOS_LoRaWAN/Testing
 .launch
 
 # Device id file
