--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@
 Projects/Applications/FreeRTOS/FreeRTOS_LoRaWAN/LoRaWAN/App/se-identity.h
 
 # Debug file
-Projects/Applications/FreeRTOS/FreeRTOS_LoRaWAN/FreeRTOS_LoRaWAN Debug.launch
+Projects/Applications/FreeRTOS/FreeRTOS_LoRaWAN/*.launch
